--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,43 @@ url: https://SaschaLucius.github.io/methods-and-tools
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+# Enable or disable the site search
+search_enabled: true
+
+# Split pages into sections defined by the headings that can be searched individually
+# Supports H1 - H6
+search.heading_level: 2
+
+mermaid:
+  # Version of mermaid library
+  # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
+  version: "10.2.4"
+
+# Aux links for the upper right navigation
+aux_links:
+  "Methods and Tools on GitHub":
+    - "https://github.com/SaschaLucius/methods-and-tools"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: false
+
+# Color scheme supports "light" (default) and "dark"
+color_scheme: dark
+
+# Footer content
+# appears at the bottom of every page's main content
+# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
+footer_content: "Copyright &copy; 2023 Sascha Lucius. Distributed by an <a href=\"https://github.com/SaschaLucius/methods-and-tools/blob/main/LICENSE\">MIT license.</a>"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub."
+gh_edit_repository: "https://github.com/SaschaLucius/methods-and-tools" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
